[package]

# TODO: revert to template name
# name = "{{project-name}}"
name = "rustwasm-worker-template"

description = "rustwasm worker template"
repository = "https://github.com/cloudflare/rustwasm-worker-template"
license = "Apache-2.0"
version = "0.1.0"

# TODO: revert to template authors
# authors = ["{{authors}}"]
authors = ["Dimitri <5898931+dimitrilw@users.noreply.github.com>"]

edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
cfg-if = "1.0.0"
worker = "0.0.18"
serde_json = "1.0.67"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
